# pytest-robotics-lab

./: .gitignore  CMakeLists.txt  README.md  pytest.ini  requirements.txt  speed.py  test_calculate_speed.py
.github/workflows/: python-tests.yml
Controller/: CMakeLists.txt
Controller/include/: RobotController.h
Controller/src/: RobotController.cpp
robot/: controller.py  exceptions.py  hardware.py  sensors.py  utils.py
tests/: conftest.py
tests/bdd/: test_motor_controller.py
tests/bdd/feature_files/: motor_controller.feature
tests/hardware/: test_real_motor.py
tests/integration/: test_controller_with_sensor.py
tests/simulation/: test_simulated_environment.py
tests/system/bindings/: CMakeLists.txt  robot_bindings.cpp
tests/system/features/: autonomous_navigation.feature
tests/system/steps/: test_navigation_steps.py
tests/unit/: test_controller.py  test_exceptions.py  test_hardware.py  test_sensors.py  test_speed_calculator.py  test_utils.py
